Make webpack HTML plugin work with a index template (so it does not remove the #root div for react)

--- a/app/index.html
+++ b/app/index.html
@@ -6,5 +6,5 @@
   </head>
   <body>
   	<div id="root"></div>
-  <script type="text/javascript" src="/build/bundle.f2facaafeb8a1e54773a.js"></script></body>
+  </body>
 </html>
