Quick fix for prod/dev env and begin adding save button

--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
   	<div id="root"></div>
-  <script type="text/javascript" src="/build/bundle.f2facaafeb8a1e54773a.js"></script></body>
+  	<script type="text/javascript" src="/build/bundle.js"></script>
+  <script type="text/javascript" src="/build/bundle.70df60cdd4418e959ace.js"></script></body>
 </html>
